# DeliverySite

del/cart/: Cart.py  context_processors.py  forms.py  urls.py  views.py
del/cart/templates/cart/: detail.html  detail1.html
del/cart/templatetags/: cart_tags.py
del/del/: asgi.py  settings.py  urls.py  wsgi.py
del/delivery/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
del/delivery/migrations/: 0001_initial.py  0002_alter_getuserinfo_options_alter_getuserinfo_managers_and_more.py  0003_product_price.py  0004_alter_product_options_alter_product_photo.py  0005_alter_product_photo.py  0006_product_slug.py  0007_alter_product_slug.py  0008_menu.py  0009_menu_url_name.py  0010_alter_menu_options_category_name.py  0011_getuserinfo_comment.py  0012_alter_getuserinfo_tel_num.py
del/delivery/static/delivery/css/: base_styles.css
del/delivery/templates/delivery/: base.html  base_el.html  contacts.html  detail.html  get_info.html  menu.html  order.html  promotions.html
del/delivery/templates/delivery/menu/: optional.html
del/delivery_tools/: pyproject.toml
del/delivery_tools/tests/: test_del.py
