[tool.poetry]
name = "delivery-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "delivery_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"
django-debug-toolbar = "^3.8.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"
httpx = "^0.23.3"
mypy = "^1.1.1"
pylint = "^2.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
